<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_one"
        android:enabled="true"
        android:icon="@drawable/ic_icon_analysis_white"
        android:title="@string/navigation_menu_item_one" />
    <item
        android:id="@+id/menu_two"
        android:enabled="true"
        android:icon="@drawable/ic_icon_market"
        android:title="@string/navigation_menu_item_two" />
    <item
        android:id="@+id/menu_three"
        android:enabled="true"
        android:icon="@drawable/ic_icon_chat"
        android:title="@string/navigation_menu_item_three" />
    <item
        android:id="@+id/menu_four"
        android:enabled="true"
        android:icon="@drawable/ic_icon_profile"
        android:title="@string/navigation_menu_item_four" />
</menu>