<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        app:cardBackgroundColor="@color/color_header_color"
        app:cardCornerRadius="4dp"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:text="@string/stock_header_equity"
                        android:textColor="@color/color_sub_title_text"
                        android:textSize="@dimen/text_12sp"
                        tools:ignore="SpUsage" />

                    <TextView
                        android:id="@+id/stockHeaderEquity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:text="$10000"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/text_12sp"
                        tools:ignore="SpUsage" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:text="@string/stock_header_balance"
                        android:textColor="@color/color_sub_title_text"
                        android:textSize="@dimen/text_12sp"
                        tools:ignore="SpUsage" />

                    <TextView
                        android:id="@+id/stockHeaderBalance"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:text="$10000"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/text_12sp"
                        tools:ignore="SpUsage" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_10dp"
                android:layout_marginEnd="@dimen/margin_10dp"
                android:background="@color/color_sub_title_text" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:text="@string/stock_header_margin"
                        android:textColor="@color/color_sub_title_text"
                        android:textSize="@dimen/text_12sp"
                        tools:ignore="SpUsage" />

                    <TextView
                        android:id="@+id/stockHeaderMargin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:text="$10000"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/text_12sp"
                        tools:ignore="SpUsage" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:text="@string/stock_header_used"
                        android:textColor="@color/color_sub_title_text"
                        android:textSize="@dimen/text_12sp"
                        tools:ignore="SpUsage" />

                    <TextView
                        android:id="@+id/stockHeaderUsed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:text="$0"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/text_12sp"
                        tools:ignore="SpUsage" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stock_header_symbol"
            android:textColor="@color/color_sub_title_text"
            android:textSize="@dimen/text_12sp"
            tools:ignore="SpUsage" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/stock_header_change"
            android:textColor="@color/color_sub_title_text"
            android:textSize="@dimen/text_12sp"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/stock_header_sell"
            android:textColor="@color/color_sub_title_text"
            android:textSize="@dimen/text_12sp"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/stock_header_buy"
            android:textColor="@color/color_sub_title_text"
            android:textSize="@dimen/text_12sp"
            tools:ignore="SpUsage" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_sub_title_text" />

</LinearLayout>